--- a/Customer Segmentation on E-commerce data/Notebook/DSC_680_Kausik_Chattapadhyay_customer-segmentation.ipynb
+++ b/Customer Segmentation on E-commerce data/Notebook/DSC_680_Kausik_Chattapadhyay_customer-segmentation.ipynb
@@ -7,7 +7,7 @@
     "_uuid": "baf39e29f412685d42adbf39a6030e5f00255d0d"
    },
    "source": [
-    "# Customer segmentation\n",
+    "# Customer segmentation By Kausik  Chattapadhyay\n",
     "\n",
     "This notebook aims at analyzing the content of an E-commerce database that lists purchases made by $\\sim$4000 customers over a period of one year (from 2010/12/01 to 2011/12/09). Based on this analysis, I develop a model that allows to anticipate the purchases that will be made by a new customer, during the following year and this, from its first purchase. <br>\n",
     "\n",
@@ -148,7 +148,8 @@
    "metadata": {
     "_cell_guid": "1063f9e0-e494-4873-939f-8aa5ca40cc89",
     "_kg_hide-input": true,
-    "_uuid": "227fc0cb1d5216d52e057e1d2d7debd0e29abe46"
+    "_uuid": "227fc0cb1d5216d52e057e1d2d7debd0e29abe46",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -769,7 +770,15 @@
        "layout": {
         "autosize": true,
         "geo": {
+         "center": {
+          "lat": 32.04107944615644,
+          "lon": 97.70551426272097
+         },
          "projection": {
+          "rotation": {
+           "lon": 97.70551426272097
+          },
+          "scale": 307.50043974597867,
           "type": "mercator"
          },
          "showframe": true
